--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ NAME=Tarea 10 Proyecto Final
 PORT=4000
 SECRET_KEY=mysecretkey
 
-DB_NAME=tarea7
+DB_NAME=railway
 DB_USER=postgres
-DB_PASSWORD=12345
-DB_HOST=localhost
+DB_PASSWORD=vEXUsSgDZQmjQiBxZengRQlFNfIArCbl
+DB_HOST=postgres.railway.internal
 DB_PORT=5432
