Conexion con Railway

--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
-NAME=Tarea 10 Proyecto Final
+NAME=MusicApp Backend
 PORT=4000
 SECRET_KEY=mysecretkey
 
 DB_NAME=railway
 DB_USER=postgres
-DB_PASSWORD=vEXUsSgDZQmjQiBxZengRQlFNfIArCbl
-DB_HOST=postgres.railway.internal
-DB_PORT=5432
+DB_PASSWORD=LXESHRVzDPiCzMlPMxyJKntjZwvmsTOL
+DB_HOST=autorack.proxy.rlwy.net
+DB_PORT=44164
+
+
+
