--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,9 @@
 {
-    "version": 2,
-  
-    "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
-  
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ]
-  }
+  "version": 2,
+  "functions": {
+    "api/*.js": { "runtime": "nodejs18.x" }
+  },
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" }
+  ]
+}
