--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
     "routes": [
       {
         "src": "/api/(.*)",
-        "dest": "/api/$1"
+        "dest": "/api/$1",
+        "headers": {
+          "Cache-Control": "max-age=3600"
+        }
       }
     ]
   }
